# AVITO-matrix-spiral-traversal

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: test and lint.yaml
mattrav/: __init__.py  exceptions.py  matrix_traversal.py
spiral_traversal/: __init__.py  solution.py
spiral_traverse/: __init__.py  solution.py
tests/: conftest.py  test_mattrav.py  test_solution.py
