[tool.poetry]
name = "avito_matrix"
version = "0.1.0"
description = ""
authors = ["idilettant <dedenev1985@gmail.com>"]
packages = [
  { include = "spiral_traversal" },
]


[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
wemake-python-styleguide = "^0.15.3"
isort = "^5.9.3"
pytest-cov = "^2.12.1"
pre-commit = "^2.15.0"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
